Started adding the student home

--- a/Clients/Angular/src/app/components/landing/landing.component.html
+++ b/Clients/Angular/src/app/components/landing/landing.component.html
@@ -5,7 +5,7 @@
 
 <div class="page-centre" *ngIf="!checking">
     <div class="error">
-        <mat-icon aria-hidden="false" aria-label="Application error">error</mat-icon>
+        <mat-icon aria-hidden="false" aria-label="Application error">error_outline</mat-icon>
     </div>
     Server is currently unavailable!
 </div>
