--- a/Clients/Angular/src/app/components/login/login.component.html
+++ b/Clients/Angular/src/app/components/login/login.component.html
@@ -26,7 +26,7 @@
             </mat-form-field>
         </mat-card-content>
         <mat-card-actions>
-            <button mat-button type="submit" *ngIf="!loggingIn">
+            <button mat-stroked-button type="submit" *ngIf="!loggingIn">
                 Login
             </button>
             <div class="spinner" *ngIf="loggingIn">
