--- a/Clients/Angular/src/app/components/teacher-home/teacher-home.component.html
+++ b/Clients/Angular/src/app/components/teacher-home/teacher-home.component.html
@@ -1,27 +1,62 @@
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
-    <mat-toolbar>Menu</mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
-    </mat-nav-list>
+  <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+      [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
+      <mat-toolbar color="primary">
+          <span mat-card-avatar class="app-icon"></span> 
+          <span class="app-title">NaoBlocks</span>
+      </mat-toolbar>
+      <mat-nav-list>
+          <a mat-list-item href="#">
+              <mat-icon aria-label="Play current program">dashboard</mat-icon> Dashboard
+          </a>
+          <mat-divider></mat-divider>
+          <a mat-list-item href="#">
+              <mat-icon aria-label="Stop current program">settings_input_composite</mat-icon> Robots
+          </a>
+          <a mat-list-item href="#">
+              <mat-icon aria-label="Stop current program">people</mat-icon> Students
+          </a>
+          <mat-divider></mat-divider>
+          <a mat-list-item href="#">
+              <mat-icon aria-label="Stop current program">construction</mat-icon> Configuration
+          </a>
+      </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <mat-toolbar color="primary">
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
-      <span>Angular</span>
-    </mat-toolbar>
-    <!-- Add Content Here -->
+      <mat-toolbar color="primary">
+          <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
+              *ngIf="isHandset$ | async">
+              <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+          </button>
+          <span>Teacher</span>
+          <span class="example-spacer"></span>
+          <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Menu">
+              <mat-icon>more_vert</mat-icon>
+          </button>
+          <mat-menu #menu="matMenu">
+              <button mat-menu-item (click)="openChangeRole('Teacher')" *ngIf="canChangeRole()">
+                  <mat-icon>account_circle</mat-icon>
+                  <span>Change Role</span>
+              </button>
+              <button mat-menu-item (click)="openAbout()">
+                  <mat-icon>help_outline</mat-icon>
+                  <span>About</span>
+              </button>
+              <mat-divider></mat-divider>
+              <button mat-menu-item (click)="logout()">
+                  <mat-icon>logout</mat-icon>
+                  <span>Log Out</span>
+              </button>
+          </mat-menu>
+      </mat-toolbar>
+
+      <mat-toolbar color="warn" *ngIf="!hasAccess">
+          <button mat-icon-button aria-label="Access error">
+              <mat-icon>error_outline</mat-icon>
+          </button>
+          <span>You do not have access to this role</span>
+          <span class="example-spacer"></span>
+          <button mat-stroked-button (click)="openChangeRole('Teacher')">Change Role</button>
+      </mat-toolbar>
   </mat-sidenav-content>
 </mat-sidenav-container>
