--- a/Clients/Angular/src/app/components/teacher-home/teacher-home.component.scss
+++ b/Clients/Angular/src/app/components/teacher-home/teacher-home.component.scss
@@ -15,3 +15,19 @@
   top: 0;
   z-index: 1;
 }
+
+.example-spacer {
+  flex: 1 1 auto;
+}
+
+.app-icon {
+  background-color: rgba($color: #fff, $alpha: 0);
+  background-image: url("/assets/AppIcon.png");
+  height: 32px;
+  width: 32px;
+  margin: 0 auto;
+}
+
+.app-title {
+  color: #000;
+}
