Changed the menu icon settings

--- a/Clients/Angular/src/app/components/student-home/student-home.component.html
+++ b/Clients/Angular/src/app/components/student-home/student-home.component.html
@@ -7,25 +7,25 @@
           </mat-toolbar>
         <mat-nav-list>
             <a mat-list-item href="#">
-                <mat-icon aria-label="Play current program">play_arrow</mat-icon> Play
+                <mat-icon aria-label="Play current program" class="menu-icon">play_arrow</mat-icon> Play
             </a>
             <a mat-list-item href="#">
-                <mat-icon aria-label="Stop current program">stop</mat-icon> Stop
-            </a>
-            <mat-divider></mat-divider>
-            <a mat-list-item href="#">
-                <mat-icon aria-label="Stop current program">delete_outline</mat-icon> Clear
+                <mat-icon aria-label="Stop current program" class="menu-icon">stop</mat-icon> Stop
             </a>
             <mat-divider></mat-divider>
             <a mat-list-item href="#">
-                <mat-icon aria-label="Stop current program">file_download</mat-icon> Load
-            </a>
-            <a mat-list-item href="#">
-                <mat-icon aria-label="Stop current program">publish</mat-icon> Save
+                <mat-icon aria-label="Delete current program" class="menu-icon">delete_outline</mat-icon> Clear
             </a>
             <mat-divider></mat-divider>
             <a mat-list-item href="#">
-                <mat-icon aria-label="Stop current program">tune</mat-icon> Settings
+                <mat-icon aria-label="Load existing program" class="menu-icon">file_download</mat-icon> Load
+            </a>
+            <a mat-list-item href="#">
+                <mat-icon aria-label="Save current program" class="menu-icon">publish</mat-icon> Save
+            </a>
+            <mat-divider></mat-divider>
+            <a mat-list-item href="#">
+                <mat-icon aria-label="Change execution settings" class="menu-icon">tune</mat-icon> Settings
             </a>
         </mat-nav-list>
     </mat-sidenav>
