--- a/Clients/Angular/src/app/components/teacher-home/teacher-home.component.html
+++ b/Clients/Angular/src/app/components/teacher-home/teacher-home.component.html
@@ -7,18 +7,18 @@
       </mat-toolbar>
       <mat-nav-list>
           <a mat-list-item href="#">
-              <mat-icon aria-label="Play current program">dashboard</mat-icon> Dashboard
+              <mat-icon aria-label="Dashboard" class="menu-icon">dashboard</mat-icon> Dashboard
           </a>
           <mat-divider></mat-divider>
           <a mat-list-item href="#">
-              <mat-icon aria-label="Stop current program">settings_input_composite</mat-icon> Robots
+              <mat-icon aria-label="Robots" class="menu-icon">settings_input_composite</mat-icon> Robots
           </a>
           <a mat-list-item href="#">
-              <mat-icon aria-label="Stop current program">people</mat-icon> Students
+              <mat-icon aria-label="Students" class="menu-icon">people</mat-icon> Students
           </a>
           <mat-divider></mat-divider>
           <a mat-list-item href="#">
-              <mat-icon aria-label="Stop current program">construction</mat-icon> Configuration
+              <mat-icon aria-label="System configuration" class="menu-icon">construction</mat-icon> Configuration
           </a>
       </mat-nav-list>
   </mat-sidenav>
