--- a/Clients/Angular/src/app/components/administrator-home/administrator-home.component.html
+++ b/Clients/Angular/src/app/components/administrator-home/administrator-home.component.html
@@ -7,24 +7,24 @@
           </mat-toolbar>
         <mat-nav-list>
             <a mat-list-item href="#">
-                <mat-icon aria-label="Play current program">dashboard</mat-icon> Dashboard
+                <mat-icon aria-label="Dashboard" class="menu-icon">dashboard</mat-icon> Dashboard
             </a>
             <mat-divider></mat-divider>
             <a mat-list-item href="#">
-                <mat-icon aria-label="Stop current program">filter_1</mat-icon> Logs
+                <mat-icon aria-label="View logs" class="menu-icon">filter_1</mat-icon> Logs
             </a>
             <a mat-list-item href="#">
-                <mat-icon aria-label="Stop current program">dns</mat-icon> Robot Types
+                <mat-icon aria-label="Robot types" class="menu-icon">dns</mat-icon> Robot Types
             </a>
             <a mat-list-item href="#">
-                <mat-icon aria-label="Stop current program">perm_data_setting</mat-icon> Settings
+                <mat-icon aria-label="Settings" class="menu-icon">perm_data_setting</mat-icon> Settings
             </a>
             <a mat-list-item href="#">
-                <mat-icon aria-label="Stop current program">supervisor_account</mat-icon> Users
+                <mat-icon aria-label="Users" class="menu-icon">supervisor_account</mat-icon> Users
             </a>
             <mat-divider></mat-divider>
             <a mat-list-item href="#">
-                <mat-icon aria-label="Stop current program">construction</mat-icon> Configuration
+                <mat-icon aria-label="System configuration" class="menu-icon">construction</mat-icon> Configuration
             </a>
         </mat-nav-list>
     </mat-sidenav>
