--- a/Clients/Angular/src/app/components/administrator-home/administrator-home.component.html
+++ b/Clients/Angular/src/app/components/administrator-home/administrator-home.component.html
@@ -2,28 +2,25 @@
     <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
         [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
         <mat-toolbar color="primary">
-            <span mat-card-avatar class="app-icon"></span> 
+            <span mat-card-avatar class="app-icon"></span>
             <span class="app-title">NaoBlocks</span>
-          </mat-toolbar>
+        </mat-toolbar>
         <mat-nav-list>
-            <a mat-list-item href="#">
+            <a mat-list-item href="#" (click)="changeView($event, 'dashboard')">
                 <mat-icon aria-label="Dashboard" class="menu-icon">dashboard</mat-icon> Dashboard
             </a>
             <mat-divider></mat-divider>
-            <a mat-list-item href="#">
+            <a mat-list-item href="#" (click)="changeView($event, 'logs')">
                 <mat-icon aria-label="View logs" class="menu-icon">filter_1</mat-icon> Logs
             </a>
-            <a mat-list-item href="#">
+            <a mat-list-item href="#" (click)="changeView($event, 'robotTypes')">
                 <mat-icon aria-label="Robot types" class="menu-icon">dns</mat-icon> Robot Types
             </a>
-            <a mat-list-item href="#">
-                <mat-icon aria-label="Settings" class="menu-icon">perm_data_setting</mat-icon> Settings
-            </a>
-            <a mat-list-item href="#">
+            <a mat-list-item href="#" (click)="changeView($event, 'users')">
                 <mat-icon aria-label="Users" class="menu-icon">supervisor_account</mat-icon> Users
             </a>
             <mat-divider></mat-divider>
-            <a mat-list-item href="#">
+            <a mat-list-item href="#" (click)="changeView($event, 'configuration')">
                 <mat-icon aria-label="System configuration" class="menu-icon">construction</mat-icon> Configuration
             </a>
         </mat-nav-list>
@@ -55,7 +52,7 @@
                 </button>
             </mat-menu>
         </mat-toolbar>
-  
+
         <mat-toolbar color="warn" *ngIf="!hasAccess">
             <button mat-icon-button aria-label="Access error">
                 <mat-icon>error_outline</mat-icon>
@@ -64,5 +61,13 @@
             <span class="example-spacer"></span>
             <button mat-stroked-button (click)="openChangeRole('Administrator')">Change Role</button>
         </mat-toolbar>
+
+        <div *ngIf="hasAccess">
+            <app-system-dashboard *ngIf="currentView=='dashboard'"></app-system-dashboard>
+            <app-logs-list *ngIf="currentView=='logs'"></app-logs-list>
+            <app-robot-types-list *ngIf="currentView=='robotTypes'"></app-robot-types-list>
+            <app-users-list *ngIf="currentView=='users'"></app-users-list>
+            <app-system-configuration *ngIf="currentView=='configuration'"></app-system-configuration>
+        </div>
     </mat-sidenav-content>
-  </mat-sidenav-container>
+</mat-sidenav-container>
