--- a/Clients/Angular/src/app/components/teacher-home/teacher-home.component.html
+++ b/Clients/Angular/src/app/components/teacher-home/teacher-home.component.html
@@ -1,62 +1,69 @@
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
-      <mat-toolbar color="primary">
-          <span mat-card-avatar class="app-icon"></span> 
-          <span class="app-title">NaoBlocks</span>
-      </mat-toolbar>
-      <mat-nav-list>
-          <a mat-list-item href="#">
-              <mat-icon aria-label="Dashboard" class="menu-icon">dashboard</mat-icon> Dashboard
-          </a>
-          <mat-divider></mat-divider>
-          <a mat-list-item href="#">
-              <mat-icon aria-label="Robots" class="menu-icon">settings_input_composite</mat-icon> Robots
-          </a>
-          <a mat-list-item href="#">
-              <mat-icon aria-label="Students" class="menu-icon">people</mat-icon> Students
-          </a>
-          <mat-divider></mat-divider>
-          <a mat-list-item href="#">
-              <mat-icon aria-label="System configuration" class="menu-icon">construction</mat-icon> Configuration
-          </a>
-      </mat-nav-list>
-  </mat-sidenav>
-  <mat-sidenav-content>
-      <mat-toolbar color="primary">
-          <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
-              *ngIf="isHandset$ | async">
-              <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-          </button>
-          <span>Teacher</span>
-          <span class="example-spacer"></span>
-          <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Menu">
-              <mat-icon>more_vert</mat-icon>
-          </button>
-          <mat-menu #menu="matMenu">
-              <button mat-menu-item (click)="openChangeRole('Teacher')" *ngIf="canChangeRole()">
-                  <mat-icon>account_circle</mat-icon>
-                  <span>Change Role</span>
-              </button>
-              <button mat-menu-item (click)="openAbout()">
-                  <mat-icon>help_outline</mat-icon>
-                  <span>About</span>
-              </button>
-              <mat-divider></mat-divider>
-              <button mat-menu-item (click)="logout()">
-                  <mat-icon>logout</mat-icon>
-                  <span>Log Out</span>
-              </button>
-          </mat-menu>
-      </mat-toolbar>
+    <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+        [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
+        <mat-toolbar color="primary">
+            <span mat-card-avatar class="app-icon"></span>
+            <span class="app-title">NaoBlocks</span>
+        </mat-toolbar>
+        <mat-nav-list>
+            <a mat-list-item href="#" (click)="changeView($event, 'dashboard')">
+                <mat-icon aria-label="Dashboard" class="menu-icon">dashboard</mat-icon> Dashboard
+            </a>
+            <mat-divider></mat-divider>
+            <a mat-list-item href="#" (click)="changeView($event, 'robots')">
+                <mat-icon aria-label="Robots" class="menu-icon">settings_input_composite</mat-icon> Robots
+            </a>
+            <a mat-list-item href="#" (click)="changeView($event, 'students')">
+                <mat-icon aria-label="Students" class="menu-icon">people</mat-icon> Students
+            </a>
+            <mat-divider></mat-divider>
+            <a mat-list-item href="#" (click)="changeView($event, 'configuration')">
+                <mat-icon aria-label="System configuration" class="menu-icon">construction</mat-icon> Configuration
+            </a>
+        </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
+        <mat-toolbar color="primary">
+            <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
+                *ngIf="isHandset$ | async">
+                <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+            </button>
+            <span>Teacher</span>
+            <span class="example-spacer"></span>
+            <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Menu">
+                <mat-icon>more_vert</mat-icon>
+            </button>
+            <mat-menu #menu="matMenu">
+                <button mat-menu-item (click)="openChangeRole('Teacher')" *ngIf="canChangeRole()">
+                    <mat-icon>account_circle</mat-icon>
+                    <span>Change Role</span>
+                </button>
+                <button mat-menu-item (click)="openAbout()">
+                    <mat-icon>help_outline</mat-icon>
+                    <span>About</span>
+                </button>
+                <mat-divider></mat-divider>
+                <button mat-menu-item (click)="logout()">
+                    <mat-icon>logout</mat-icon>
+                    <span>Log Out</span>
+                </button>
+            </mat-menu>
+        </mat-toolbar>
 
-      <mat-toolbar color="warn" *ngIf="!hasAccess">
-          <button mat-icon-button aria-label="Access error">
-              <mat-icon>error_outline</mat-icon>
-          </button>
-          <span>You do not have access to this role</span>
-          <span class="example-spacer"></span>
-          <button mat-stroked-button (click)="openChangeRole('Teacher')">Change Role</button>
-      </mat-toolbar>
-  </mat-sidenav-content>
+        <mat-toolbar color="warn" *ngIf="!hasAccess">
+            <button mat-icon-button aria-label="Access error">
+                <mat-icon>error_outline</mat-icon>
+            </button>
+            <span>You do not have access to this role</span>
+            <span class="example-spacer"></span>
+            <button mat-stroked-button (click)="openChangeRole('Teacher')">Change Role</button>
+        </mat-toolbar>
+
+        <div *ngIf="hasAccess">
+            <app-system-dashboard *ngIf="currentView=='dashboard'"></app-system-dashboard>
+            <app-robots-list *ngIf="currentView=='robots'"></app-robots-list>
+            <app-students-list *ngIf="currentView=='students'"></app-students-list>
+            <app-system-configuration *ngIf="currentView=='configuration'"></app-system-configuration>
+        </div>
+    </mat-sidenav-content>
 </mat-sidenav-container>
