--- a/Clients/Angular/src/styles.scss
+++ b/Clients/Angular/src/styles.scss
@@ -1,4 +1,50 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+}
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+table.data-list {
+    width: calc(100% - 2rem);
+    margin: 1rem;
+}
+
+.mat-column-select {
+    width: 48px;
+    text-align: center !important;
+}
+
+.list-commands {
+    margin: 1rem 1rem;
+}
+
+.list-commands-all {
+    display: inline-block;
+    width: 10rem;
+
+    button {
+        width: 9rem;
+    }
+}
+
+.list-commands-selection {
+    display: inline-block;
+}
+
+.mat-raised-button.command-button {
+    margin: 0 0.5rem;
+}
+
+.list-commands-header {
+    margin: 0 1rem 0.5rem 0;
+    padding: 0 -1rem;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+    display: inline-block;
+    font-size: smaller;
+    width: 100%;
+}
