--- a/Clients/Angular/src/app/components/robots-list/robots-list.component.html
+++ b/Clients/Angular/src/app/components/robots-list/robots-list.component.html
@@ -1,1 +1,70 @@
-<p>robots-list works!</p>
+<div class="list-commands">
+    <div class="list-commands-all">
+        <div>
+            <div>
+            </div>
+            <div>
+                <button mat-raised-button color="accent" class="command-button">Add Robot</button>
+            </div>
+        </div>
+    </div>
+    <div class="list-commands-selection">
+        <div class="list-commands-header">
+            Selection
+        </div>
+        <div>
+            <button mat-raised-button class="command-button" [disabled]="selection.selected.length != 1">Edit</button>
+            <button mat-raised-button class="command-button" [disabled]="selection.isEmpty()">Delete</button>
+            <button mat-raised-button class="command-button" [disabled]="selection.isEmpty()"
+                [matMenuTriggerFor]="exportMenu">
+                Export
+                <mat-icon>arrow_drop_down</mat-icon>
+            </button>
+            <mat-menu #exportMenu="matMenu">
+                <button mat-menu-item>List</button>
+                <button mat-menu-item [disabled]="selection.selected.length != 1">Details</button>
+                <button mat-menu-item [disabled]="selection.selected.length != 1">Logs</button>
+                <button mat-menu-item [disabled]="selection.selected.length != 1">Snapshots</button>
+            </mat-menu>
+        </div>
+    </div>
+</div>
+
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 data-list">
+
+    <ng-container matColumnDef="machineName">
+        <th mat-header-cell *matHeaderCellDef> Machine Name </th>
+        <td mat-cell *matCellDef="let record"> {{record.machineName}} </td>
+    </ng-container>
+    <ng-container matColumnDef="friendlyName">
+        <th mat-header-cell *matHeaderCellDef> Friendly Name </th>
+        <td mat-cell *matCellDef="let record"> {{record.friendlyName}} </td>
+    </ng-container>
+    <ng-container matColumnDef="type">
+        <th mat-header-cell *matHeaderCellDef> Type </th>
+        <td mat-cell *matCellDef="let record"> {{record.type}} </td>
+    </ng-container>
+    <ng-container matColumnDef="whenAdded">
+        <th mat-header-cell *matHeaderCellDef> When Added </th>
+        <td mat-cell *matCellDef="let record"> {{record.whenAdded | date:'d MMM, y - h:mm:ss a'}} </td>
+    </ng-container>
+    <ng-container matColumnDef="isInitialised">
+        <th mat-header-cell *matHeaderCellDef> </th>
+        <td mat-cell *matCellDef="let record"> {{record.isInitialised ? '' : 'Uninitialised'}} </td>
+    </ng-container>
+    <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef>
+            <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
+                [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
+            </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let row">
+            <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
+                [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
+            </mat-checkbox>
+        </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="columns"></tr>
+    <tr mat-row *matRowDef="let row; columns: columns;"></tr>
+</table>
