--- a/Clients/Angular/src/app/components/teacher-home/teacher-home.component.html
+++ b/Clients/Angular/src/app/components/teacher-home/teacher-home.component.html
@@ -6,18 +6,18 @@
             <span class="app-title">NaoBlocks</span>
         </mat-toolbar>
         <mat-nav-list>
-            <a mat-list-item href="#" (click)="changeView($event, 'dashboard')">
+            <a mat-list-item href="#" (click)="changeView($event, 'Dashboard')">
                 <mat-icon aria-label="Dashboard" class="menu-icon">dashboard</mat-icon> Dashboard
             </a>
             <mat-divider></mat-divider>
-            <a mat-list-item href="#" (click)="changeView($event, 'robots')">
+            <a mat-list-item href="#" (click)="changeView($event, 'Robots')">
                 <mat-icon aria-label="Robots" class="menu-icon">settings_input_composite</mat-icon> Robots
             </a>
-            <a mat-list-item href="#" (click)="changeView($event, 'students')">
+            <a mat-list-item href="#" (click)="changeView($event, 'Students')">
                 <mat-icon aria-label="Students" class="menu-icon">people</mat-icon> Students
             </a>
             <mat-divider></mat-divider>
-            <a mat-list-item href="#" (click)="changeView($event, 'configuration')">
+            <a mat-list-item href="#" (click)="changeView($event, 'Configuration')">
                 <mat-icon aria-label="System configuration" class="menu-icon">construction</mat-icon> Configuration
             </a>
         </mat-nav-list>
@@ -28,7 +28,7 @@
                 *ngIf="isHandset$ | async">
                 <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
             </button>
-            <span>Teacher</span>
+            <span>Teacher: {{currentView}}</span>
             <span class="example-spacer"></span>
             <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Menu">
                 <mat-icon>more_vert</mat-icon>
@@ -60,10 +60,10 @@
         </mat-toolbar>
 
         <div *ngIf="hasAccess">
-            <app-system-dashboard *ngIf="currentView=='dashboard'"></app-system-dashboard>
-            <app-robots-list *ngIf="currentView=='robots'"></app-robots-list>
-            <app-students-list *ngIf="currentView=='students'"></app-students-list>
-            <app-system-configuration *ngIf="currentView=='configuration'"></app-system-configuration>
+            <app-system-dashboard *ngIf="currentView=='Dashboard'"></app-system-dashboard>
+            <app-robots-list *ngIf="currentView=='Robots'"></app-robots-list>
+            <app-students-list *ngIf="currentView=='Students'"></app-students-list>
+            <app-system-configuration *ngIf="currentView=='Configuration'"></app-system-configuration>
         </div>
     </mat-sidenav-content>
 </mat-sidenav-container>
