--- a/Clients/Angular/src/styles.scss
+++ b/Clients/Angular/src/styles.scss
@@ -48,3 +48,28 @@ table.data-list {
     font-size: smaller;
     width: 100%;
 }
+
+form.editor {
+    margin: 1rem;
+
+    .commands {
+        margin-bottom: 1rem;
+        display: flex;
+
+        .spacer {
+            flex: 1 1 auto;
+        }
+    }
+}
+
+.lower-1 {
+    margin-top: 1rem;
+}
+
+.lower-3 {
+    margin-top: 3rem;
+}
+
+mat-form-field.fill-width {
+    width: 100%;
+}
